--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTIxMTQ1NDU0NjA1NjgzOTE3OA.GmlLhb.8AzD9HVoaEgy0UmWU2mOowliyzaFTQiJ86NcLg",
+    "token": "  null,
     "allowed_channel_ids": ["1211454949377056799", "CHANNEL_ID_2", "CHANNEL_ID_3"],
     "image2textChannels":["1211454949377056799", "CHANNEL_ID_2", "CHANNEL_ID_3"]
 }
